@startuml Wave System

class MonoBehaviour {
    ...
}

class WaveManager {
- waveNumber: int
- currentWave: Wave
- defendWaveObjectsManager: DefendWaveObjectsManager

+ StartNextWave(): void
+ OnEnemyKilled(): delegate void
+ FinishWave(): void
}

abstract class Wave {
# waveManager: WaveManager

{abstract} # InitializeWave(): void
{abstract} + GetCompletionPercentage(): float
# CompleteWave(): void
}

class DefendWave {
- objectives: HashSet<DefendWaveObjective>
- destroyedObjectives: int

# InitializeWave(): void
+ ObjectiveDestroyed(destroyedObjective: DefendWaveObjective): void
+ GetCompletionPercentage(): float
}

class DefendWaveObjectsManager {
...
}

class KillWave {

# InitializeWave(): void
+ GetCompletionPercentage(): float
}

' WaveManager uses Waves
WaveManager ..> Wave
WaveManager ..> DefendWaveObjectsManager
DefendWave ..> DefendWaveObjectsManager

Wave <|-- DefendWave
Wave <|-- KillWave
MonoBehaviour <|-- WaveManager
@enduml